--- a/index.html
+++ b/index.html
@@ -28,13 +28,12 @@
             position: relative;
         }
 
-        /* ✨ 배경 수정: 흐림 정도 줄임 (8px -> 3px) */
         #bg-blur {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             object-fit: cover;
-            filter: blur(3px) brightness(0.5); /* 형태가 은은하게 보임 */
+            filter: blur(3px) brightness(0.5);
             z-index: -1;
-            transform: scale(1.05); /* 테두리 잘림 방지 */
+            transform: scale(1.05);
         }
 
         .container {
@@ -43,7 +42,6 @@
             z-index: 10;
             transition: opacity 0.5s;
             display: flex; flex-direction: column; align-items: center;
-            /* 타이머와의 간격을 위해 약간 위로 올림 */
             margin-bottom: 50px; 
         }
 
@@ -104,9 +102,8 @@
         }
         .buy-ticket:hover { opacity: 1; color: var(--silver-mid); }
 
-        /* ✨ 2030 카운트다운 타이머 스타일 */
         .timer-box {
-            margin-top: 20px; /* 로그인창 아래에 배치 */
+            margin-top: 20px; 
             text-align: center;
             z-index: 10;
             padding: 15px;
@@ -125,7 +122,6 @@
             font-size: 18px; color: var(--silver-dark); letter-spacing: 2px; margin-top: 2px;
         }
 
-        /* 상태 화면 (Pending / Welcome) */
         .status-overlay {
             display: none; flex-direction: column; align-items: center; gap: 20px;
             width: 100%; text-align: center; animation: fadeIn 1s;
@@ -229,7 +225,7 @@
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
 
-        // --- 2030 타이머 로직 ---
+        // --- 2030 타이머 ---
         function updateGlobalTimer() {
             const targetDate = new Date("Jan 1, 2030 00:00:00").getTime();
             const now = new Date().getTime();
@@ -254,7 +250,6 @@
         }
         setInterval(updateGlobalTimer, 1000);
         updateGlobalTimer();
-        // -----------------------
 
         async function digestMessage(message) {
             const msgUint8 = new TextEncoder().encode(message);
@@ -266,19 +261,16 @@
             document.getElementById('errorMsg').classList.remove('show');
         }
 
-        // 입장 요청 (로그인 시도)
         window.requestEntry = async function() {
             const codeInput = document.getElementById('accessCode').value.trim().toUpperCase();
             const walletInput = document.getElementById('walletAddr').value.trim();
             const btn = document.querySelector('.submit-btn');
             const errorEl = document.getElementById('errorMsg');
 
-            // 빈칸 체크
             if (!codeInput || !walletInput) {
                 errorEl.innerText = "Fill all fields.";
                 errorEl.classList.add('show'); return;
             }
-            // 지갑 주소 체크
             if (!walletInput.startsWith('0x') || walletInput.length !== 42) {
                 errorEl.innerText = "Invalid Wallet Address (Must be 42 chars starting with 0x).";
                 errorEl.classList.add('show'); return;
@@ -289,13 +281,13 @@
             btn.style.pointerEvents = "none";
 
             try {
-                // 1. 암호 해시값 생성
+                // 1. 암호 해시 생성
                 const codeHash = await digestMessage(codeInput);
 
-                // 🔥 [중요] 이 줄이 정답을 알려주는 코드입니다!
-                prompt("이 값을 복사해서 파이어베이스 문서 ID로 쓰세요:", codeHash);
+                // 🔥 [디버깅용 팝업] 생성된 해시값을 눈으로 확인하고 복사하세요!
+                prompt("이 값을 복사해서 DB 문서 ID로 쓰세요:", codeHash);
 
-                // 2. 파이어베이스 확인
+                // 2. DB 확인
                 const codeRef = doc(db, "secret_codes", codeHash);
                 const codeSnap = await getDoc(codeRef);
 
@@ -308,7 +300,7 @@
                     return;
                 }
 
-                // 3. 지갑 주소 확인 및 등록 로직
+                // 3. 지갑 확인
                 const userDocRef = doc(db, "oracle_requests", walletInput);
                 const userSnap = await getDoc(userDocRef);
 
@@ -334,44 +326,7 @@
 
             } catch (e) {
                 console.error(e);
-                alert("Error: " + e.message);
-                btn.innerText = "Request Entry";
-                btn.style.opacity = "1";
-                btn.style.pointerEvents = "auto";
-            }
-        };
-
-                // 2. 지갑 확인
-                const userDocRef = doc(db, "oracle_requests", walletInput);
-                const userSnap = await getDoc(userDocRef);
-
-                if (!userSnap.exists()) {
-                    // 신규 -> 대기
-                    await setDoc(userDocRef, {
-                        wallet_address: walletInput,
-                        status: 'pending_entry',
-                        entry_requested_at: new Date().toISOString(),
-                        guardian_id: null
-                    });
-                    showPendingScreen(new Date());
-                } else {
-                    // 기존
-                    const data = userSnap.data();
-                    
-                    if (data.status === 'pending_entry') {
-                        showPendingScreen(new Date(data.entry_requested_at));
-                    } else if (data.status === 'rejected') {
-                        document.getElementById('loginForm').style.display = 'none';
-                        document.getElementById('rejectedView').style.display = 'flex';
-                    } else {
-                        // 승인됨 (entry_approved 이상)
-                        showWelcomeScreen(data);
-                    }
-                }
-
-            } catch (e) {
-                console.error(e);
-                errorEl.innerText = "Connection Error.";
+                errorEl.innerText = "Connection Error: " + e.message;
                 errorEl.classList.add('show');
                 btn.innerText = "Request Entry";
                 btn.style.opacity = "1";
@@ -428,7 +383,7 @@
         window.enterSanctum = function() {
             localStorage.setItem('chosen_access', 'granted');
             document.getElementById('loginContainer').classList.add('smoke-out');
-            document.getElementById('timeCapsule').classList.add('smoke-out'); // 타이머도 같이 사라짐
+            document.getElementById('timeCapsule').classList.add('smoke-out');
             setTimeout(() => {
                 window.location.href = "inner-sanctum.html";
             }, 1500);
